# DuplicatePhotoHandler

./: .complexity-log.md  Cargo.toml  package.json
docs/plans/: 2026-01-15-tauri-ui-design.md  2026-01-17-large-files.md  2026-01-17-organize-by-date.md  2026-01-17-screenshots-feature-design.md  2026-01-17-screenshots-implementation.md
src/: lib.rs  main.rs
src-tauri/: .complexity-log.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/cli/: mod.rs
src/core/: mod.rs
src/core/cache/: memory.rs  mod.rs  sqlite.rs  traits.rs
src/core/comparator/: grouper.rs  lsh.rs  mod.rs  traits.rs
src/core/hasher/: fast_decode.rs  fast_resize.rs  fusion.rs  mmap_decode.rs  mod.rs  traits.rs
src/core/hasher/algorithms/: average.rs  difference.rs  mod.rs  perceptual.rs
src/core/history/: mod.rs  repository.rs  types.rs
src/core/large_files/: mod.rs  scanner.rs
src/core/metadata/: mod.rs
src/core/organize/: executor.rs  mod.rs  planner.rs  scanner.rs  types.rs
src/core/pipeline/: executor.rs  mod.rs  optimization.rs
src/core/quality/: mod.rs
src/core/reporter/: explanation.rs  export.rs  mod.rs  visualization.rs
src/core/scanner/: filter.rs  mod.rs  walker.rs
src/core/screenshot/: detector.rs  mod.rs
src/core/similar/: mod.rs  scanner.rs  types.rs
src/core/unorganized/: mod.rs  scanner.rs  types.rs
src/core/watcher/: mod.rs
src/error/: mod.rs
src/events/: channel.rs  mod.rs  types.rs
tests/: integration_pipeline.rs  integration_unorganized.rs
ui/: .complexity-log.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/components/: ActionBar.tsx  AlgorithmSelector.tsx  AnimatedCounter.tsx  BeforeAfter.tsx  CommandPalette.tsx  ComparisonView.tsx  Confetti.tsx  ConfirmModal.tsx  DuplicateGroupCard.tsx  EmptyState.tsx  ExportModal.tsx  FolderSelector.tsx  HistoryCard.tsx  HistoryView.tsx  ImagePreview.tsx  LargeFileCard.tsx  LargeFileGrid.tsx  LargeFileScanView.tsx  LargeFilesView.tsx  MasterResultsView.tsx  MasterScanView.tsx  OrganizeConfigView.tsx  OrganizePreviewView.tsx  OrganizeResultView.tsx  OrganizeView.tsx  PageTransition.tsx  ProgressRing.tsx  QuickActions.tsx  RecoveryView.tsx  ResultsHeader.tsx  ResultsSummary.tsx  ResultsView.tsx  ScanButton.tsx  ScanProfiles.tsx  ScanProgress.tsx  ScanView.tsx  ScreenshotCard.tsx  ScreenshotGrid.tsx  ScreenshotScanView.tsx  ScreenshotsView.tsx  (+17 more)
ui/src/context/: SpaceSavingsContext.tsx
ui/src/hooks/: useLargeFileScanEvents.ts  useOrganizeEvents.ts  useScanEvents.ts  useScreenshotScanEvents.ts  useSimilarScanEvents.ts  useUndo.ts  useUnorganizedScanEvents.ts
ui/src/lib/: animationVariants.ts  tauri.ts  types.ts
